--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
-h1, p {
+h1,
+p {
   font-family: Lato;
+}
+
+.slot-result {
+  font-family: 'Courier New', Courier, monospace;
+}
+.slot-result[data-is-win='true'] {
+  font-weight: bold;
+}
+.slot-result--col[data-is-win='true'] {
+  color: red;
 }
