2 files modified, 1 added

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ p {
 
 .slot-result {
   font-family: 'Courier New', Courier, monospace;
+  font-size: 200%;
 }
 .slot-result[data-is-win='true'] {
   font-weight: bold;
